# rangemax

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/rangemax/: __init__.py  cli.py  models.py  report.py  simulator.py
src/rangemax/battery/: __init__.py  estimator.py  health.py  model.py
src/rangemax/optimizer/: __init__.py  climate.py  driving.py  route.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_rangemax.py
